kyvernorules/Yaml-Examples/K8S-Public-DNS-Eligible+/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    opso.info/allowed-private-hosts: dev.beta.opso.net
    opso.info/allowed-public-hosts: dev.beta.opso.net, opso.com, elmes.of, salam.com
  labels:
    kubernetes.io/metadata.name: test
  name: test
spec:
  finalizers:
  - kubernetes
